<resources>
    <string name="app_name">ContactProject</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_name_lt_b_gt_bold_lt_b_gt"><![CDATA[Contact Name <b>Bold</b>]]></string>
</resources>